# ReceiptMaster

./: .gitignore  README.md  Untitled.ipynb  app.py  many_img_app.py  pyproject.toml  requirements.txt  streamlit_app.py
lhc/: PaddleOCR-OpenAI-postpp.ipynb  PaddleOCR-OpenAI.ipynb  app.py  requirements.txt  streamlit_app.ipynb  streamlit_many_images_app.ipynb
notebook/: openai-image-ocr.ipynb  openai-image.ipynb  paddleocr+bert.ipynb  zerox-ocr.ipynb
osy/: ko-troCR.py  ocr_bllossom.py  ocr_origin.py  ocr_processing.py  preprocess_ocr.py  readme.md  requirements.txt
